--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <div class="tgmenu__wrap">
                 <nav class="tgmenu__nav">
                   <div class="logo">
-                    <a href="index-2.html"
+                    <a href="/"
                       ><img
                         style="width: 100px"
                         src="./images/logo.png"
@@ -109,7 +109,7 @@
                     </svg>
                   </div>
                   <div class="nav-logo">
-                    <a href="index-2.html"
+                    <a href="/"
                       ><img
                         style="width: 100px"
                         src="./images/logo.png"
@@ -176,7 +176,7 @@
         <div class="offCanvas__body">
           <div class="offCanvas__top">
             <div class="offCanvas__logo logo">
-              <a href="index-2.html"
+              <a href="/"
                 ><img src="assets/img/logo/logo.png" alt="Logo"
               /></a>
             </div>
