--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <div class="col-xl-6 col-lg-6 order-0 order-lg-2">
               <div class="about__funFact-images">
                 <img
-                  src="assets/img/others/fun_fact_shape.png"
+                  src="assets/img/others/BNB BANK2 (2).png"
                   alt="background"
                   class="bg-shape"
                 />
@@ -661,7 +661,7 @@
               <div id="tokenomics" class="row justify-content-center">
                 <div class="col-xl-7 col-lg-7">
                   <div class="about__img">
-                    <img style="width: 100%" src="./images/tkn.jpg" alt="img" />
+                    <img style="width: 100%" src="./images/BNBBANK2Text-removebg-preview.png" alt="img" />
                   </div>
                 </div>
                 <div class="col-xl-5 col-lg-5">
